...
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">SmartCitizen</string>

    <string name="phone_sign_in">Phone Sign In</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Sign In -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_authenticating_with_firebase">Authenticating with Firebase…</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
...
